--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Dataviz' un peu ma grosse...</title>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
 
