Installation d'ui-router avec bower, et inclusion dans index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Dataviz' un peu ma grosse...</title>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
