--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
+    <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="js/services.js"></script>
+    <script type="text/javascript" src="js/dataviz.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
-<body>
+<body ng-app="dataviz">
 
 </body>
 </html>
