Mise en place d'une div ui-view dans le body pour inclure les vues du routing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body ng-app="dataviz">
-
+    <div ui-view></div>
 </body>
 </html>
