Rajout de  commentaires dans l'index au niveau des inclusions

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
     <title>Dataviz' un peu ma grosse...</title>
+    <!-- Angular -->
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+    <!-- UI-Router -->
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-
     <!-- Angular Material -->
     <script type="text/javascript" src="bower_components/angular-material/angular-material.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="bower_components/angular-messages/angular-messages.js"></script>
     <script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
+    <!-- Application Angular -->
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/dataviz.js"></script>
