Inclusion du CSS d'Angular Material dans l'index.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/dataviz.js"></script>
 
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <!-- Angular CSS -->
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.css">
 </head>
 <body ng-app="dataviz">
     <div ui-view></div>
