--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/dataviz.js"></script>
 
+    <!-- AmCharts -->
+    <script type="text/javascript" src="bower_components/amcharts3/amcharts/amcharts.js"></script>
+    <script type="text/javascript" src="bower_components/amcharts3/amcharts/serial.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <!-- Angular CSS -->
