Inclusion de jQuery dans l'index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/dataviz.js"></script>
 
+    <!-- jQuery -->
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+
     <!-- AmCharts -->
     <script type="text/javascript" src="bower_components/amcharts3/amcharts/amcharts.js"></script>
     <script type="text/javascript" src="bower_components/amcharts3/amcharts/serial.js"></script>
