Installtion de HighCharts avec Bower et inclusion dans l'index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <script type="text/javascript" src="bower_components/amcharts3/amcharts/amcharts.js"></script>
     <script type="text/javascript" src="bower_components/amcharts3/amcharts/serial.js"></script>
 
+    <!-- HighCharts -->
+    <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <!-- Angular CSS -->
