--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- HighCharts -->
     <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
 
+    <!-- D3JS -->
+    <script type="text/javascript" src="bower_components/d3/d3.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <!-- Angular CSS -->
