Installation de RaphaelJs avec bower et inclusion dans l'index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <!-- D3JS -->
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
 
+    <!-- RaphaelJS -->
+    <script type="text/javascript" src="bower_components/raphael/raphael.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <!-- Angular CSS -->
