Inclusion de google maps + marker-cluster dans l'index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <!-- RaphaelJS -->
     <script type="text/javascript" src="bower_components/raphael/raphael.js"></script>
 
+    <!-- Google Map -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZY2RJ4SXMT95aEW1A3y-h0D-22i1c5Cs"></script>
+    <script type="text/javascript" src="bower_components/js-marker-clusterer/src/markerclusterer.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <!-- Angular CSS -->
