--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="bower_components/raphael/raphael.js"></script>
 
     <!-- Google Map -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZY2RJ4SXMT95aEW1A3y-h0D-22i1c5Cs"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZY2RJ4SXMT95aEW1A3y-h0D-22i1c5Cs&libraries=visualization"></script>
     <script type="text/javascript" src="bower_components/js-marker-clusterer/src/markerclusterer.js"></script>
 
     <!-- CSS -->
