Changement du titre par qquchose de politiquement plus correct ;)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dataviz' un peu ma grosse...</title>
+    <title>Dataviz'</title>
     <!-- Angular -->
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <!-- UI-Router -->
